--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Bogdan Tesileanu</h1>
-							<p>Hyperspace Engineer</p>
+							<p>Data Scientist</p>
 						</div>
 
 					<!-- Nav -->
