--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/shell_age_modeling/blob/main/abalone_model.ipynb" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="http://html5up.net/license">free</a> 
+												<a href="https://github.com/tesileanu/shell_age_modeling/blob/main/abalone_model.ipynb">Abalone Shell</a> 
 											</h3>
 										</header>
 									</article>
