--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/shell_age_modeling/blob/main/abalone_model.ipynb" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/shell_age_modeling" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/shell_age_modeling/blob/main/abalone_model.ipynb">Abalone Shell</a> 
+												<a href="https://github.com/tesileanu/shell_age_modeling">Abalone Shell Model</a> 
 											</h3>
 										</header>
 									</article>
@@ -105,9 +105,11 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/fuel_efficiency_model" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3> 
+												<a href="https://github.com/tesileanu/fuel_efficiency_model> "Fuel Efficiency Model </a>
+											/h3>
 										</header>
 									</article>
 									<article class="item">
