--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 										<a href="https://github.com/tesileanu/fuel_efficiency_model" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/fuel_efficiency_model> "Fuel Efficiency Model </a>
-											/h3>
+												<a href="https://github.com/tesileanu/fuel_efficiency_model">Fuel Efficiency Model</a>
+											<h3>
 										</header>
 									</article>
 									<article class="item">
