--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/student_database" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>
+												<a href="https://github.com/tesileanu/student_database"> Student Management Database</a>
+											</h3>
 										</header>
 									</article>
 								</div>
