--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank">Abalone Shell Model</a> 
+												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer">Abalone Shell Model</a> 
 											</h3>
 										</header>
 									</article>
@@ -105,18 +105,18 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/fuel_efficiency_model" target="_blank" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/fuel_efficiency_model" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/fuel_efficiency_model" target="_blank">Fuel Efficiency Model</a>
+												<a href="https://github.com/tesileanu/fuel_efficiency_model" target="_blank" rel="noopener noreferrer">Fuel Efficiency Model</a>
 											<h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/tesileanu/student_database" target="_blank" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/student_database" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>
-												<a href="https://github.com/tesileanu/student_database" target="_blank"> Student Management Database</a>
+												<a href="https://github.com/tesileanu/student_database" target="_blank" rel="noopener noreferrer"> Student Management Database</a>
 											</h3>
 										</header>
 									</article>
