--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
+								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>, a Data Scientist, adventurer, <br />
+								and life-long learner.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
 							</header>
