--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>, a Data Scientist, adventurer, <br />
+								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>. A Data Scientist, adventurer, <br />
 								and life-long learner.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
