--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
+							<li><a href="https://www.kaggle.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 							<li><a href="mailto:bogdan012294@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
