--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/tesileanu/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.kaggle.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
