--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/self_health" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Self Health (In Progress)</h3>
 										</header>
 									</article>
 								</div>
