--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/tesileanu/self_health" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/self_health" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Self Health (In Progress)</h3>
+											<h3>
+												<a href="https://github.com/tesileanu/self_health" target="_blank" rel="noopener noreferrer">Self Health (In Progress)</a>
+											</h3>
 										</header>
 									</article>
 								</div>
