--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<li><a href="https://www.kaggle.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 							<li><a href="https://medium.com/@bogdan012294" target="_blank" rel="noopener noreferrer" class="icon brands fa-medium-m"><span class="label">Facebook</span></a></li>
 							<li><a href="mailto:bogdan012294@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="https://github.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon brands fa-address-card"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/tesileanu" target="_blank" rel="noopener noreferrer" class="icon solid fa-file"><span class="label">File</span></a></li>
 						</ul>
 
 				</div>
