--- a/index.html
+++ b/index.html
@@ -153,12 +153,11 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Ever since I was little, I loved finding patterns and trends. An innate curiosity about the world around me was present even 
+								in my childhood days in Romania. The move to the USA inspried me to expand that curiosity into data, health, and even aviation. 
+								My current interests revolve around nutiriton, exercise, and optimal practices to extend longevity. 
+							
+							</p>
 
 						</div>
 					</section>
