--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 
 							<p>Ever since I was little, I loved finding patterns and trends. An innate curiosity about the world around me was present even 
 								in my childhood days in Romania. The move to the USA inspried me to expand that curiosity into data, health, and even aviation. 
-								My current interests revolve around nutiriton, exercise, and optimal practices to extend longevity. 
+								My current interests revolve around nutiriton, exercise, and optimal practices to extend longevity. On the side, I love finding
+								my mental and physical limits, and pushing past them. Whether it's climbing a mountain or completing an escape room, a difficult
+								challange is what drives me.
 							
 							</p>
 
