--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							<p>Ever since I was little, I loved finding patterns and trends. An innate curiosity about the world around me was present even 
 								in my childhood days in Romania. I have now realized how much A/B testing I was doing on my parents. The move to the USA inspried me to expand 
 								that curiosity into data, health, and even aviation. My current interests revolve around nutrition, exercise, and optimal practices to extend longevity. 
-								On the side, I love finding y mental and physical limits, and pushing past them. Whether it's climbing a mountain or completing an escape room, a difficult
+								On the side, I love finding my mental and physical limits, and pushing past them. Whether it's climbing a mountain or completing an escape room, a difficult
 								challange is what drives me to be better.
 							
 							</p>
