--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Below you can find a sample of my work. Some personal project are ongoing as I gather more data.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
