--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>. A Data Scientist, adventurer, <br />
 								and life-long learner.</h2>
-								<p>LExpertise in making informed decisions, Machine Learning, Data Visualization, Python, and LEGO Technics.</p>
+								<p>Expertise in making informed decisions, Machine Learning,
+							Data Visualization, Python, and LEGO Technics.</p>
 							</header>
 
 							<footer>
