--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Below you can find a sample of my work. Some personal project are ongoing as I gather more data.</p>
+							<p>Below you can find a sample of my work. There is something for every taste.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
