--- a/index.html
+++ b/index.html
@@ -169,12 +169,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>In order to contact me, use the form below to send me an email directly. <br>Alternatively, click on the mail icon in the sidebar.</p>
 
-							<form method="post" action="#">
+							<form method="POST" action="https://formspree.io/f/xeqnened">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
