--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
 											</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3> 
+												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer">New Project</a> 
+											</h3>
+										</header>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
