--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>. A Data Scientist, adventurer, <br />
 								and life-long learner.</h2>
-								<p>Expertise in making informed decisions, Machine Learning,<br>
-							Data Visualization, Python, and LEGO Technics.</p>
+								<p><strong>Expertise in making informed decisions, Machine Learning,<br>
+							Data Visualization, Python, and LEGO Technics.</strong></p>
 							</header>
 
 							<footer>
