--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>. A Data Scientist, adventurer, <br />
 								and life-long learner.</h2>
 								<p><strong>Expertise in making informed decisions, Machine Learning,<br>
-							Data Visualization, Python, and LEGO Technics.</strong></p>
+							Data Visualization, Python, and statistical analysis.</strong></p>
 							</header>
 
 							<footer>
