--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Below you can find a sample of my work. There is something for every taste.</p>
+							<p>Below you can find a sample of my work.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -113,6 +113,14 @@
 											<h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3> 
+												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
+											<h3>
+										</header>
+									</article>
 
 								</div>
 								<div class="col-4 col-12-mobile">
@@ -121,6 +129,14 @@
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/self_health" target="_blank" rel="noopener noreferrer">Self Health (In Progress)</a>
+											</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<header>
+											<h3>
+												<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer">Spanish Wine Quality Prediction</a>
 											</h3>
 										</header>
 									</article>
