--- a/index.html
+++ b/index.html
@@ -142,16 +142,32 @@
 									</article>
 								</div>
 							</div>
+
+						</div>
+					</section>
+				<!-- Tableau -->					
+					<section id="tableau" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Tableau</h2>
+							</header>
+
+
+							<p>Below is dashboard created from the Motorcycle Dataset Analysis found above.
+							</p>
+							
 							<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
 							<tableau-viz id="tableauViz"       
 							  src='https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1'      
 							  height='1100px' width='1000px' toolbar='bottom' hide-tabs>
 							</tableau-viz>
+
 						</div>
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="about" class="four">
 						<div class="container">
 
 							<header>
@@ -172,7 +188,7 @@
 					</section>
 
 				<!-- Contact -->
-					<section id="contact" class="four">
+					<section id="contact" class="five">
 						<div class="container">
 
 							<header>
