--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 											</h3>
 										</header>
 									</article>
+
+								</div>
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
@@ -113,7 +116,6 @@
 									</article>
 
 								</div>
-								
 							</div>
 
 						</div>
