--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<p>Below you can find an SQL project demonstrating creation of database, populating, and queries</p>
 
 							<div class="row">
-
+								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="https://github.com/tesileanu/student_database" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
