--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
 						<div class="container">
 
 							<header>
-								<h2>Tableau</h2>
+								<h2>Data Visualization</h2>
 							</header>
 
 
-							<p>Below is dashboard created from the Motorcycle Dataset Analysis found above.
+							<p>Below is dashboard created from the Motorcycle Company Analysis found above.
 							</p>
 							
 							<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
