--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portofolio" class="two">
+					<section id="portfolio" class="two">
 						<div class="container">
 
 							<header>
