--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/student_database" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/student_database/blob/main/student_database_design.pdf" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>
-												<a href="https://github.com/tesileanu/student_database" target="_blank" rel="noopener noreferrer"> Student Management Database</a>
+												<a href="https://github.com/tesileanu/student_database/blob/main/student_database_design.pdf" target="_blank" rel="noopener noreferrer"> Student Management Database</a>
 											</h3>
 										</header>
 									</article>
