--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/motorcycle.jpg" alt="" /></a>
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
@@ -134,7 +134,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/wine.jpg" alt="" /></a>
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer">Spanish Wine Quality Prediction</a>
