--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 							<p>Below is dashboard created from the Motorcycle Company Analysis found above.
 							</p>
 							
-							<iframe seamless frameborder="0" src="https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no" width = '800' height = '1000' scrolling='yes' ></iframe> 
-
+							<!-- <iframe seamless frameborder="0" src="https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no" width = '800' height = '1000' scrolling='yes' ></iframe> 
+-->
 						</div>
 					</section>
 
