--- a/index.html
+++ b/index.html
@@ -208,8 +208,11 @@
 							<p>Below is dashboard created from the Motorcycle Company Analysis found above.
 							</p>
 							
-							<!-- <iframe seamless frameborder="0" src="https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1?:embed=yes&:display_count=yes&:showVizHome=no" width = '800' height = '1000' scrolling='yes' ></iframe> 
--->
+							<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
+							<tableau-viz id="tableauViz"       
+							  src='https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1'      
+							  height='1050px' width='1000px' toolbar='bottom' hide-tabs>
+							</tableau-viz>
 						</div>
 					</section>
 
