--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer">Abalone Shell Model</a> 
+												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer">Abalone Shell Age </a> 
 											</h3>
 										</header>
 									</article>
@@ -112,6 +112,17 @@
 											<h3> 
 												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
 											<h3>
+										</header>
+									</article>
+
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/student.jpg" alt="" /></a>
+										<header>
+											<h3> 
+												<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer">Student Performance Report</a> 
+											</h3>
 										</header>
 									</article>
 
