--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#Data Analysis" id="data_analysis-link"><span class="icon solid fa-th">Data Analysis</span></a></li>
+								<li><a href="#Machine Learning" id="machine_learning-link"><span class="icon solid fa-th">Machine Learning</span></a></li>
+								<li><a href="#Database & SQL" id="database_sql-link"><span class="icon solid fa-th">Database & SQL</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
