--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#data_analysis" id="data_analysis-link"><span class="icon solid fa-th">Data Analysis</span></a></li>
 								<li><a href="#machine_learning" id="machine_learning-link"><span class="icon solid fa-th">Machine Learning</span></a></li>
 								<li><a href="#database_sql" id="database_sql-link"><span class="icon solid fa-th">Database & SQL</span></a></li>
 								<li><a href="#data_visualization" id="data_visualization-link"><span class="icon solid fa-th">Data Visualization</span></a></li>
@@ -87,7 +87,7 @@
 					</section>
 
 				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+					<section id="data_analysis" class="two">
 						<div class="container">
 
 							<header>
