--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#data_analysis" id="data_analysis-link"><span class="icon solid fa-th">Data Analysis</span></a></li>
 								<li><a href="#machine_learning" id="machine_learning-link"><span class="icon solid fa-th">Machine Learning</span></a></li>
-								<li><a href="#database_sql" id="database_sql-link"><span class="icon solid fa-th">Database & SQL</span></a></li>
+								<li><a href="#database_sql" id="database_sql-link"><span class="fa-solid fa-database"></i>">Database & SQL</span></a></li>
 								<li><a href="#data_visualization" id="data_visualization-link"><span class="icon solid fa-th">Data Visualization</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
