--- a/index.html
+++ b/index.html
@@ -221,12 +221,14 @@
 
 							<p>Below is dashboard created from the Motorcycle Company Analysis found above.
 							</p>
-							
-							<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
-							<tableau-viz id="tableauViz"       
-							  src='https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1'      
-							  height='1400px' width='1400px' toolbar='bottom' hide-tabs>
-							</tableau-viz>
+						
+							<body>
+								<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
+								<tableau-viz id="tableauViz"       
+								  src='https://public.tableau.com/views/MotorcycleDataVisualization/Dashboard1'      
+								  height='1400px' width='1400px' toolbar='bottom' hide-tabs>
+								</tableau-viz>
+							</body>
 						</div>
 					</section>
 
