--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 							</header>
 
 
-							<p>Below is dashboard created from the Motorcycle Company Analysis found above.
+							<p>Below is dashboard created from the Motorcycle Company Analysis found above using Tableau.
 							</p>
 						
 							<body>
