--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-WLX9NEELSF"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-3FKC9N48FG"></script>
 		<script>
- 		 window.dataLayer = window.dataLayer || [];
-  		function gtag(){dataLayer.push(arguments);}
- 		 gtag('js', new Date());
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
 
-  		gtag('config', 'G-WLX9NEELSF');
-</script>
+  			gtag('config', 'G-3FKC9N48FG');
+		</script>
 	</head>
 	<body class="is-preload">
 
