--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portofolio</a>
 							</footer>
 
 						</div>
