--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
 							</header>
 
 							<footer>
-								<a href="#data_analysis" class="button scrolly">Portofolio</a>
-								<a href="#data_analysis" class="button scrolly">Portofolio</a>
-								<a href="#data_analysis" class="button scrolly">Portofolio</a>
-								<a href="#data_analysis" class="button scrolly">Portofolio</a>
-								<a href="#data_analysis" class="button scrolly">Portofolio</a>
+								<a href="#data_analysis" class="button scrolly">Portfolio</a>
 							</footer>
 
 						</div>
