--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Bogdan Tesileanu. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Bogdan Tesileanu. 2022. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
