--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/avatar.jpeg" alt="" /></span>
 							<h1 id="title">Bogdan Tesileanu</h1>
 							<p>Data Scientist</p>
 						</div>
