--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
 											<h3>
 										</header>
+										<p>Below you can find an SQL project demonstrating creation of a database, populating, and running queries</p>
 									</article>
 
 								</div>
