--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
-												<p>Below you can find an SQL project demonstrating creation of a database, populating, and running queries</p>
+												<p> <\br> Below you can find an SQL project demonstrating creation of a database, populating, and running queries</p>
 											<h3>
 										</header>
 										
