--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/motorcyle_dataset_analysis" target="_blank" rel="noopener noreferrer">Motorcycle Company Analysis</a>
-												<p> <br/> Below you can find an SQL project demonstrating creation of a database, populating, and running queries</p>
+												<p> <br/> Data cleaning and single variable/pairwise exploratory data analysis of motorcycle company sales data</p>
 											<h3>
 										</header>
 										
@@ -116,6 +116,7 @@
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/shell_age_modeling" target="_blank" rel="noopener noreferrer">Abalone Shell Age</a> 
+												<p> <br/> Data cleaning, preprocessing, and using conditional probabilities for predicting abalone shell age</p>
 											</h3>
 										</header>
 									</article>
@@ -126,7 +127,8 @@
 										<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/student.jpg" alt="" /></a>
 										<header>
 											<h3> 
-												<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer">Student Performance Report</a> 
+												<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer">Student Performance Report</a>
+												<p> <br/> Analyzing the magnitude of different factors affecting student performance on reading, writing, and math scores </p>
 											</h3>
 										</header>
 									</article>
