--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/student_performance" target="_blank" rel="noopener noreferrer">Student Performance Report</a>
-												<p> <br/> Analyzing the magnitude of different factors affecting student performance on reading, writing, and math scores </p>
+												<p> <br/> Analyzing the effects of different socioeconomic, financial, ethnic, and acadmic factors affecting student performance on reading, writing, and math scores </p>
 											</h3>
 										</header>
 									</article>
