--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/spanish_wine" target="_blank" rel="noopener noreferrer">Spanish Wine Quality Prediction</a>
+												<p> <br/> Analyzing wine data and using classification and regression machine learning algorithms to improve quality </p>
 											</h3>
 										</header>
 									</article>
@@ -167,6 +168,7 @@
 										<header>
 											<h3> 
 												<a href="https://github.com/tesileanu/fuel_efficiency_model" target="_blank" rel="noopener noreferrer">Fuel Efficiency Model</a>
+												<p> <br/> Predicting car fuel efficiency using bootstrap techniques, linear regression, residuals, and Bayesian statistics </p>
 											<h3>
 										</header>
 									</article>
@@ -178,6 +180,7 @@
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/self_health" target="_blank" rel="noopener noreferrer">Self Health (In Progress)</a>
+												<p> <br/> Personal venture using my personal wearable data to analyze the interaction between sleep quality and blood glucose </p>
 											</h3>
 										</header>
 									</article>
