--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 												<p> <br/> Personal venture using my personal wearable data to analyze the interaction between sleep quality and blood glucose </p>
 											</h3>
 										</header>
+										<p> <br/> Personal venture using my personal wearable data to analyze the interaction between sleep quality and blood glucose </p>
 									</article>
 								</div>
 							</div>
