--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/self_health" target="_blank" rel="noopener noreferrer">Self Health (In Progress)</a>
-												<p> <br/> Personal venture using my personal wearable data to analyze the interaction between sleep quality and blood glucose </p>
+												<p> <br/>Personal venture using my wearable data to analyze the interaction between sleep quality and blood glucose</p>
 											</h3>
 										</header>
-										<p> <br/> Personal venture using my personal wearable data to analyze the interaction between sleep quality and blood glucose </p>
 									</article>
 								</div>
 							</div>
