--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 										<header>
 											<h3>
 												<a href="https://github.com/tesileanu/student_database/blob/main/student_database_design.pdf" target="_blank" rel="noopener noreferrer"> Student Management Database</a>
+												<p> <br/>Full database design, implementation, population, and queries of special education student data</p>
 											</h3>
 										</header>
 									</article>
