--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								<h2>Database management and SQL</h2>
 							</header>
 
-							<p>Below you can find an SQL project demonstrating creation of a database, populating, and running queries</p>
+							<p>Below you can find an database project using SQL</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
