--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Bogdan</strong>. A Data Scientist, adventurer, <br />
+								<h2 class="alt">Hi! I'm <a href="https://github.com/tesileanu/resume/blob/main/Resume1.pdf" target="_blank" rel="noopener noreferrer">Bogdan</a>. A Data Scientist, adventurer, <br />
 								and life-long learner.</h2>
 								<p><strong>Expertise in making informed decisions, Machine Learning,<br>
 							Data Visualization, Python, and statistical analysis.</strong></p>
