--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>In order to contact me, use the form below to send me an email directly. <br>Alternatively, click on the mail icon in the sidebar.</p>
+							<p>In order to contact me, use the form below to send me an email directly. <br>Alternatively, click on the mail icon in the bottom sidebar.</p>
 
 							<form method="POST" action="https://formspree.io/f/xeqnened">
 								<div class="row">
